info table is now shown in the ad info block

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     googletag.cmd.push(function() {
       googletag.defineSlot('/188708772/cathy-oct-test', [728, 90], 'div-gpt-ad-1508454321758-0').addService(googletag.pubads());
       googletag.defineSlot('/188708772/cathy-oct-test-vertical', [120, 600], 'div-gpt-ad-1508567979563-0').addService(googletag.pubads());
+      googletag.defineSlot('/188708772/cathy-oct-test-rect', [300, 250], 'div-gpt-ad-1508803854110-0').addService(googletag.pubads());
       googletag.pubads().enableSingleRequest();
       googletag.enableServices();
     });
@@ -77,8 +78,7 @@
             }
 
             .body-content {
-              padding-top: 22px;
-              padding-bottom: 10px;
+              padding: 22px 9px 10px;
               text-align: justify;
             }
 
@@ -170,13 +170,17 @@
              display: inline-block;
             }
 
+            .bottom-rect-ad {
+              float: right;
+              margin: 10px;
+            }
+
             .body-content-lower-section {
               display: inline-block;
               text-align: justify;
               font-size: 20px;
               font-weight: 300;
               margin-bottom: 26px;
-              margin-left: 0;
             }
 
             @media only screen and (max-width: 991px) {
@@ -237,6 +241,15 @@
                       <p>As for the new funding, it was led by Japanese firm Venture Labo Investment, with participation from existing investors. Although C1X is headquartered in Silicon Valley, it has an office in Japan (as well as India), with plans for further expansion through a deal to create a trading desk with Dentsu and Cyber Communications.</p>
                       <p>C1X is also backed by a number of Japanese investors, including University of Tokyo Edge Capital (which led the $5.1 million Series A).</p>
                       <p>We have been aggressive in our global expansion because we know that our versatile, proprietary product suite can be tailored to solve the exact pain points of key players in each unique market,Nagayama said in an emailed statement. We have formed premium partnerships in the United States, India and Tokyo, and we are also planning to also open offices in Dubai and Singapore this year to expand into the Asia Pacific, Middle East and African markets.</p>
+                    </div>
+
+                    <div class="col-md-12">
+                      <!-- /188708772/cathy-oct-test-rect -->
+                      <div class='bottom-rect-ad' id='div-gpt-ad-1508803854110-0' style='height:250px; width:300px;'>
+                        <script>
+                        googletag.cmd.push(function() { googletag.display('div-gpt-ad-1508803854110-0'); });
+                        </script>
+                      </div>
                     </div>
                 </div>
 
